fixed z-index for drop down - commited a few files that i missed last time

--- a/cfg/static/style/auto/x_edshare_core.css
+++ b/cfg/static/style/auto/x_edshare_core.css
@@ -224,6 +224,11 @@ div.autocomplete ul li {
 	width: 100%;
 }
 
+ /* not sure why the drop downs aren't ordered - but I will do it explicitly just to make sure  */
+.ep_drop_target {
+	z-index: 5;
+}
+
 /* front page stuff */
 #edshare_frontpage_left {
 	width: 55%;
